# personsite/urls.py
@@ -18,6 +18,7 @@ urlpatterns = [
 
     # Local
     path('posts/', include('posts.urls')),
+    path('shop/products/', include('shop.urls')),
 ]
 
 if settings.DEBUG:
